--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,10 +8,11 @@ AllCops:
 Metrics/AbcSize:
   Max: 25
 
-# FIXME: Make the class shorter
+# FIXME: Make the classes shorter
 Metrics/ClassLength:
   Exclude:
     - lib/reek/core/code_parser.rb
+    - lib/reek/cli/options.rb
 
 # FIXME: Document these classes
 Style/Documentation:
@@ -32,8 +33,6 @@ Metrics/MethodLength:
 
 # Be a little more lenient with line length
 Metrics/LineLength:
-  Exclude:
-    - lib/reek/cli/options.rb
   Max: 100
 
 # Allow small arrays of words with quotes
