--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,6 +19,7 @@ Style/Documentation:
   Exclude:
     - features/support/env.rb
     - lib/reek/cli/report/formatter.rb
+    - lib/reek/cli/report/location_formatter.rb
     - lib/reek/smells/smell_detector.rb
     - lib/reek/source/sexp_extensions.rb
     - lib/reek/spec/should_reek_of.rb
