Exclude Options from ClassLength cop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,6 +12,7 @@ Metrics/AbcSize:
 Metrics/ClassLength:
   Exclude:
     - lib/reek/core/code_parser.rb
+    - lib/reek/cli/options.rb
 
 # FIXME: Document these classes
 Style/Documentation:
